FIXED: the news page content alignment issues are fixed. tested visualization on mobile.

--- a/wp-content/themes/siso/css/news.css
+++ b/wp-content/themes/siso/css/news.css
@@ -45,9 +45,9 @@ Theme Name: Siso
 
 
 .post_nav {
-  display: inline; 
-  width: 100%;
-  margin-top:45px;
+	display: inline;
+	width: 100%;
+	margin-top:45px;
 }
 
 .rightnav {
@@ -149,6 +149,14 @@ hr {
 
 .mob_ap {
 	display:none !important;
+}
+
+/*added style to fix the alignment issue on news page*/
+.post_nav {
+	float: left;
+}
+#post_details {
+	padding: 30px;
 }
 
 @media (min-width: 768px) and (max-width: 972px) and (max-height: 594px) {
